# Warframe_Tracker_Bot

./: .dockerignore  .env.example  .gitignore  COMMANDS.md  Dockerfile  Plan.md  README.md  docker-compose.yml  pyproject.toml
tests/unit/: test_aggregate_source.py  test_baro_history.py  test_baro_service.py  test_cached_source.py  test_embeds.py  test_emoji_normalize.py  test_emoji_registry.py  test_fake_source.py  test_fissure_service.py  test_guild_settings_repo.py  test_railjack.py  test_refresher.py  test_settings_cog.py  test_tables.py  test_tracked_channels_repo.py  test_translator.py  test_warframestat_adapter.py
titania/: __main__.py  bot.py  config.py
titania/cogs/: fissures.py  help.py  language.py  notifications.py  ping.py  settings.py  tracking.py  vendors.py
titania/data/: cached.py  factory.py  source.py
titania/data/aggregate/: source.py
titania/data/baro/: history.py
titania/data/fake/: source.py
titania/domain/: baro.py  era.py  fissure.py  mission_type.py  node.py  railjack.py  subscription_filter.py  topic.py
titania/i18n/: en.toml  it.toml  translator.py
titania/presentation/: embeds.py  filter_panel.py  notification_embed.py  settings_panel.py  tables.py  vendor_embed.py
titania/services/: baro_service.py  emoji_registry.py  fissure_service.py  guild_settings.py  notifier.py  reaction_subscriber.py  refresher.py
titania/storage/: db.py  fissure_subscriptions_repo.py  guild_settings_repo.py  tracked_channels_repo.py  tracked_vendors_repo.py  user_notification_messages_repo.py  user_preferences_repo.py
(+3 files in other folders)
